- Improve matching of paths to reduce risk of matching the wrong branch. - Add stable/8 support.
Submitted by:	des, Dimitry Andric <dimitry@andric.com>


git-svn-id: https://svn.freebsd.org/base/svnadmin@196156 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f

--- a/conf/mailer.conf
+++ b/conf/mailer.conf
@@ -335,54 +335,58 @@ truncate_subject = 200
 #
 
 [svnadmin]
-for_paths = svnadmin/.*
+for_paths = ^svnadmin(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-svnadmin@freebsd.org
 
 [head]
-for_paths = head/.*
+for_paths = ^head(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-head@freebsd.org
 
+[stable-8]
+for_paths = ^stable/8(/[^/]+)*$
+to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-stable@freebsd.org svn-src-stable-8@freebsd.org
+
 [stable-7]
-for_paths = stable/7/.*
+for_paths = ^stable/7(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-stable@freebsd.org svn-src-stable-7@freebsd.org
 
 [stable-6]
-for_paths = stable/6/.*
+for_paths = ^stable/6(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-stable@freebsd.org svn-src-stable-6@freebsd.org
 
 [stable-other]
-for_paths = stable/[^67]/.*
+for_paths = ^stable/[^678](/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-stable@freebsd.org svn-src-stable-other@freebsd.org
 
 [projects]
-for_paths = projects/.*
+for_paths = ^projects(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-projects@freebsd.org
 
 [user]
-for_paths = user/.*
+for_paths = ^user(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-user@freebsd.org
 
 [release]
-for_paths = release/.*
+for_paths = ^release(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-release@freebsd.org
 
 [releng]
-for_paths = releng.*
+for_paths = ^releng(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-releng@freebsd.org
 
 [vendor]
-for_paths = vendor.*
+for_paths = ^vendor(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-vendor@freebsd.org
 
 [vendor-cddl]
-for_paths = vendor-cddl/.*
+for_paths = ^vendor-cddl(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-vendor@freebsd.org
 
 [vendor-crypto]
-for_paths = vendor-crypto/.*
+for_paths = ^vendor-crypto(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-vendor@freebsd.org
 
 [vendor-sys]
-for_paths = vendor-sys/.*
+for_paths = ^vendor-sys(/[^/]+)*$
 to_addr = src-committers@freebsd.org svn-src-all@freebsd.org svn-src-vendor@freebsd.org
 
