--- a/test/elfcopy/plugin/Makefile.ardiff
+++ b/test/elfcopy/plugin/Makefile.ardiff
@@ -1,4 +1,4 @@
-# $Id: Makefile.ardiff 3121 2014-12-21 05:46:01Z kaiwang27 $
+# $Id: Makefile.ardiff 3609 2018-04-14 21:34:45Z jkoshy $
 
 TOP=	../../..
 
@@ -12,3 +12,7 @@ DPADD=	${LIBARCHIVE}
 LDADD=	-larchive
 
 .include "${TOP}/mk/elftoolchain.prog.mk"
+
+.if ${OS_HOST} == "DragonFly"
+LDADD+=	-lbz2
+.endif
